--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -12,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="velo.uned.velocimetro.diseño.Registro">
+    tools:context="velo.uned.velocimetro.diseno.Registro">
 
     <TextView
         android:id="@+id/lblRegistro"
