--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="velo.uned.velocimetro.diseño.Login">
+    tools:context="velo.uned.velocimetro.diseno.Login">
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
