Correcion Bug R y Creacion ListView

--- a/app/src/main/res/layout/layout_list_mediciones.xml
+++ b/app/src/main/res/layout/layout_list_mediciones.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv"/>
+        android:id="@+id/tvdistancia"
+        android:text="Distancia"
+        android:textColor="@color/grey_dark"
+        android:textSize="25dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvFechaini"
+        android:text="FechaInicio"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvFechafin"
+        android:text="FechaFin"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvvelocidad"
+        android:text="Velocidad"
+        />
 </LinearLayout>
